Added icon packs

--- a/index.html
+++ b/index.html
@@ -262,7 +262,9 @@
     <li>
         <h3>Icon Packs</h3>
         <ul class="square-list">
-            <li><a href="https://github.com/peterthomet/openseadragon-flat-toolbar-icons">Flat Toolbar Icons</a>; simple, flat design toolbar icons.</li>
+            <li><a href="https://github.com/Benomrans/openseadragon-icons">Flat Blue Icons</a></li>
+            <li><a href="https://gitlab.com/tombrossman/openseadragon-svg-icons/">SVG Flat Icons</a></li>
+            <li><a href="https://github.com/peterthomet/openseadragon-flat-toolbar-icons">Thin Flat Icons</a></li>
         </ul>
     </li>
 </ul>
