add 'Global Change Poster Explorer' as usage example

--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -390,6 +390,7 @@
             <li><a href="https://gp3.mpg.de/viewer/setInfo/MH454">Pax6 expression in mouse embryo</a></li>
         </ul>
     </li>
+    <li><a href="https://globalchanges.github.io/PosterExplorer/#">Global Change Poster Explorer</a></li>
     <li>
         <a href="https://greatbasinforensics.com/">Great Basin Forensics :: Remote Forensic Imaging</a>
         <ul>
