New tool for in the wild

--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -428,8 +428,8 @@
             <li>Video <a href="https://www.youtube.com/watch?v=AqV9Tj6heEI">5-MICC: Neural Networks and Cancer Detection in Tissue Scans</a></li>
             <li><a href="https://rationai-vis.ics.muni.cz/visualization-demo/">Interactive showcase </a></li>
         </ul>
-    </li>  
-    
+    </li>
+
      <li><a href="http://rosphoto.org/multispectral/index-en.html">ROSPHOTO Spectrozonal photography usage for attribution and analysis in archival photography</a></li>
      <li><a href="http://heatmaps.nimblex.net/">SDR Heatmaps (radio frequencies)</a>
          <ul>
@@ -471,6 +471,7 @@
 <h4><a name="tools"></a>Tools</h4>
 <ul class="square-list">
     <li><a href="http://annotorious.github.io/demos/openseadragon-preview.html">Annotorious</a></li>
+    <li><a href="https://cirrocumulus.readthedocs.io/">Cirrocumulus for large-scale single-cell genomics data</a></li>
     <li><a href="https://github.com/tokee/juxta">Juxta</a> (<a href="http://labs.statsbiblioteket.dk/juxta/subject3795/">Demo</a>)</li>
     <li><a href="https://micr.io">Micrio</a> (<a href="https://micr.io/iiif/image-api">Demo</a>)</li>
     <li><a href="http://projectmirador.org">Mirador</a> (<a href="http://projectmirador.org/demo/">demo</a> - <a href="https://github.com/IIIF/mirador">GitHub</a>)</li>
