--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
        alt="Fork me on GitHub" /></a>
     <div id="container">
         <div class="download">
-            <a href="https://github.com/openseadragon/openseadragon/releases/download/v3.1.0/openseadragon-bin-3.1.0.zip">
+            <a href="https://github.com/openseadragon/openseadragon/releases/download/v4.0.0/openseadragon-bin-4.0.0.zip">
                 <img border="0" width="90" src="/images/zip.png"></a>
-            <a href="https://github.com/openseadragon/openseadragon/releases/download/v3.1.0/openseadragon-bin-3.1.0.tar.gz">
+            <a href="https://github.com/openseadragon/openseadragon/releases/download/v4.0.0/openseadragon-bin-4.0.0.tar.gz">
                 <img border="0" width="90" src="/images/tar.png"></a>
         </div>
         <img class="logo" src="/images/logo.png">
         <h1>
             <a href="/">OpenSeadragon</a><span class="version">
-                3.1.0
+                4.0.0
             </span>
             <span class="tagline">
             </span>
@@ -196,6 +196,18 @@
             </a></li>
         </ul>
     </li>
+    
+    <li>
+        <h3>Advanced data model in OpenSeadragon with custom TileSource</h3>
+        <p>
+            From custom caching to client-side generated image data.
+        </p>
+        <ul>
+            <li><a href='/examples/advanced-data-model/'>
+                <span>Advanced data model with TileSource</span>
+            </a></li>
+        </ul>
+    </li>
 
     <li>
         <h3>Developer Tools</h3>
@@ -294,13 +306,13 @@
 <a name="installing"></a>
 <h2 id='download'>Download &amp; Install</h2>
 <p>
-  You can get OpenSeadragon 3.1.0 through any of these venues:
+  You can get OpenSeadragon 4.0.0 through any of these venues:
 </p>
 <ul class="square-list">
   <li>
     <strong>Download:</strong>
-    <a href="https://github.com/openseadragon/openseadragon/releases/download/v3.1.0/openseadragon-bin-3.1.0.zip">zip</a> or
-    <a href="https://github.com/openseadragon/openseadragon/releases/download/v3.1.0/openseadragon-bin-3.1.0.tar.gz">tar.gz</a>
+    <a href="https://github.com/openseadragon/openseadragon/releases/download/v4.0.0/openseadragon-bin-4.0.0.zip">zip</a> or
+    <a href="https://github.com/openseadragon/openseadragon/releases/download/v4.0.0/openseadragon-bin-4.0.0.tar.gz">tar.gz</a>
   </li>
   <li>
     <strong>Bower:</strong> <tt>bower install openseadragon</tt>
@@ -309,10 +321,10 @@
     <strong>npm:</strong> <tt>npm install openseadragon</tt> (<a href="https://www.npmjs.com/package/openseadragon">info</a>)
   </li>
   <li>
-    <strong>jsDelivr (CDN):</strong> <a href="https://cdn.jsdelivr.net/npm/openseadragon@3.1/build/openseadragon/openseadragon.min.js">code</a> and <a href="https://cdn.jsdelivr.net/npm/openseadragon@3.1/build/openseadragon/images/">images</a>
+    <strong>jsDelivr (CDN):</strong> <a href="https://cdn.jsdelivr.net/npm/openseadragon@4.0/build/openseadragon/openseadragon.min.js">code</a> and <a href="https://cdn.jsdelivr.net/npm/openseadragon@4.0/build/openseadragon/images/">images</a>
   </li>
   <li>
-    <strong>CDNJS (CDN):</strong> <a href="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/3.1.0/openseadragon.min.js">code</a> and <a href="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/3.1.0/images/">images</a> (<a href="https://cdnjs.com/libraries/openseadragon">info</a>)
+    <strong>CDNJS (CDN):</strong> <a href="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/4.0.0/openseadragon.min.js">code</a> and <a href="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/4.0.0/images/">images</a> (<a href="https://cdnjs.com/libraries/openseadragon">info</a>)
   </li>
 </ul>
 <p>
