--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -331,6 +331,13 @@
 
 <h4><a name="mapping"></a>Mapping</h4>
 <ul class="square-list">
+    <li><a href="https://maps.gpixel.org">Gipxel.orG</a>
+        <ul>
+            <li>e.g. <a href="https://gpixel.org/q/m/pt/">Portugal topographic map 1:25.000 (28 Gpixels)</a></li>
+            <li>e.g. <a href="https://gpixel.org/q/m/cv/">Cape Verde topographic map 1:25.000 (5,4 Gpixels)</a></li>
+            <li>e.g. <a href="https://gpixel.org/q/m/st/">São Tomé topographic map 1:25.000 (1,6 Gpixels)</a></li>
+        </ul>
+    </li>
     <li><a href="https://lib.msu.edu/branches/map/scannedmaps/intro/">Michigan State University Map Library</a>
         <ul>
             <li>e.g. <a href="https://lib.msu.edu/branches/map/MiJPEGS/1822-michigan/">Michigan Territory, 1822</a></li>
