Updated creation page

--- a/examples/creating-zooming-images/index.html
+++ b/examples/creating-zooming-images/index.html
@@ -59,6 +59,8 @@
         <h2>Creating Zooming Images</h2>
 
 <p>OpenSeadragon works with a <a href="/#examples-and-features">variety of zooming image formats</a>. These zooming images generally consist of a number of individual tiles, organized so they can be accessed as needed. If you have a large image you'd like to zoom, you'll need to convert it first. There are a number of conversion options depending on your needs.</p>
+<p>Probably the easiest is to use a service like Zoomable or ZoomHub.</p>
+<p>If you'd rather convert the images yourself (either locally or on your server), VIPS may be your best option; it's fast, robust, and compatible with many systems.</p>
 <!-- <p>Probably the easiest is to use <a href="http://zoom.it">Zoom.it</a>; see our <a href="/examples/tilesource-zoomit/">Zoom.it instructions</a>.</p>
 <p>Other tools include:</p> -->
 <table class="for-examples">
@@ -80,16 +82,16 @@
         <td>Python</td>
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
     </tr>
-    <tr>
+    <!-- <tr>
         <td><a href="https://www.microsoft.com/en-us/download/details.aspx?id=24819">Deep Zoom Composer</a></td>
         <td>desktop app for Windows</td>
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
-    </tr>
-    <tr>
+    </tr> -->
+    <!-- <tr>
         <td><a href="https://docs.microsoft.com/en-us/archive/blogs/expression/hello-deepzoomtools-dll-deep-zoom-image-tile-generation-made-easy">DeepZoomTools.dll</a></td>
         <td>.NET library, comes with Deep Zoom Composer</td>
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
-    </tr>
+    </tr> -->
     <tr>
         <td><a href="https://github.com/dblock/dzt">DZT</a></td>
         <td>an image slicing library and tool written in Ruby</td>
@@ -100,16 +102,16 @@
         <td>C++</td>
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
     </tr>
-    <tr>
+    <!-- <tr>
         <td><a href="https://www.microsoft.com/en-us/download/details.aspx?id=52341">HD View Utilities</a></td>
         <td>Photoshop plugin and command-line tool (Windows)</td>
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
-    </tr>
-    <tr>
+    </tr> -->
+    <!-- <tr>
         <td><a href="https://www.microsoft.com/en-us/research/product/computational-photography-applications/image-composite-editor/">Image Composite Editor</a></td>
         <td>panoramic image stitcher from Microsoft Research for the Windows desktop</td>
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
-    </tr>
+    </tr> -->
     <tr>
         <td><a href="https://github.com/VoidVolker/MagickSlicer">MagickSlicer</a></td>
         <td>shell script (Linux/Mac)</td>
@@ -120,11 +122,11 @@
         <td>Node.js, under construction</td>
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
     </tr>
-    <tr>
+    <!-- <tr>
         <td><a href="http://chafalladas.com/dzifiles/dzi_creator_up/dzi_creator_perl.html">OpenSeaDragon DZI Online Composer</a></td>
         <td>Web app (and PERL and PHP scripts)</td>
         <td><a href="/examples/tilesource-dzi/">DZI</a></td>
-    </tr>
+    </tr> -->
     <tr>
         <td><a href="https://github.com/nfabre/deepzoom.php">PHP Deep Zoom Tools</a></td>
         <td>PHP</td>
