--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -102,7 +102,10 @@
             <li>e.g. <a href="http://zoom.feinerarts.com/earth_city/">Earth City</a></li>
         </ul>
     </li>
-    <li><a href="http://www.ireland.com/features/game-of-thrones-tapestry/">Game of Thrones Tapestry</a></li>
+    <li>
+        <a href="https://www.webwallwhispers.net/">Fondazione Spinola-Banna: Web Wall Whispers</a>
+    </li>
+    <!-- <li><a href="http://www.ireland.com/features/game-of-thrones-tapestry/">Game of Thrones Tapestry</a></li> -->
     <li>
          <a href="http://boschproject.org/book_links.html">Hieronymus Bosch, Painter and Draughtsman: Catalogue Raisonné</a>
          <ul>
@@ -174,7 +177,11 @@
         </ul>
     </li>
     <li>
-        <a href="https://www.webwallwhispers.net/">Fondazione Spinola-Banna: Web Wall Whispers</a>
+        <a href="https://zachfox.photography/">Zach Fox Photography</a>
+        <ul>
+            <li>e.g. <a href="https://zachfox.photography/stories/gigapixel-manhattan-skyline-nyc/">Gigapixel Panorama: Manhattan Skyline, NYC</a></li>
+            <li>e.g. <a href="https://zachfox.photography/stories/gigapixel-manhattan-skyline-nyc-night/">Gigapixel Panorama: Manhattan Skyline, NYC at Midnight</a>
+        </ul>
     </li>
 </ul>
 
@@ -273,7 +280,8 @@
             <li>e.g. <a href="http://digitalcollections.nypl.org/items/8c108420-d56d-0131-4a50-58d385a7bbd0">Lighthouse, 1935-1943</a></li>
         </ul>
     </li>
-    <li><a href="http://mcgrawect.princeton.edu/seadragon/">Princeton University Digital Library at The McGraw Center</a></li>
+    <li>
+        <a href="http://mcgrawect.princeton.edu/seadragon/">Princeton University Digital Library at The McGraw Center</a>
         <ul>
             <li>e.g. <a href="http://commons.princeton.edu/soviet/">Playing Soviet</a>'s <a href="http://pudl.princeton.edu/viewer.php?obj=n870zt57n#page/6/mode/2up">80,000 Horses</a></li>
         </ul>
