Fixed anchor tag

--- a/index.html
+++ b/index.html
@@ -144,8 +144,10 @@
             other reasons.
         </p>
         <ul>
-            <li><a href="https://pearcetm.github.io/GeoTIFFTileSource/demo.html">
-                <span>GeoTIFFTileSource - view TIFF-compatible files via geotiff.js</span>
+            <li>
+                <a href="https://pearcetm.github.io/GeoTIFFTileSource/demo.html">
+                    GeoTIFFTileSource - view TIFF-compatible files via geotiff.js
+                </a>
             </li>
         </ul>
     </li>
