Added browser version note

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 <p>
     Older releases and source archives are
     <a href="https://github.com/openseadragon/openseadragon/releases">
-    available on GitHub</a>.
+    available on GitHub</a>. The last version to support IE11 is 4.1.0. The last version to support IE8-10 is 2.4.2. Otherwise, we generally support the active versions of the major browsers. 
 </p>
 
 <ul>
