--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -437,6 +437,13 @@
         </ul>
     </li>
     <li>
+        <a href="https://www.patolojiatlasi.com/EN/">Patoloji Atlası</a>: a bilingual histopathology atlas containing whole slide images
+        <ul>
+            <li><a href="https://github.com/pathologyatlas/make-html-WSI">SVS to OpenSeadragon instuctions</a></li>
+            <li><a href="https://github.com/pathologyatlas/template">OpenSeadragon website template</a></li>
+        </ul>
+    </li>
+    <li>
         <b>RationAI</b> visualization tool for high-resolution, multi-layered data by
          <a href="https://www.fi.muni.cz/research/laboratories/rationai.html.en">RationAI research group at Masaryk University</a>:
          explainable artifical intelligence research focused on cancer detection.
