--- a/index.html
+++ b/index.html
@@ -380,13 +380,14 @@
 
 
 <h2 id='api-documentation'>API Documentation</h2>
-<p>Available on our <a href="/docs/">documentation pages</a>.</p>
+<p>Available on our <a href="/docs/">documentation pages</a>. Also see our <a href="https://github.com/openseadragon/openseadragon/wiki/FAQ">FAQ</a>.</p>
 
 
 <h2 id='support'>Support</h2>
 <p>GitHub: <a href="https://github.com/openseadragon/openseadragon/issues">issue tracker</a></p>
 <p>Twitter: <a href="https://twitter.com/openseadragon">@OpenSeadragon</a></p>
-<p>Chat: <a href="https://discord.gg/Ygwap8UrGC">Discord</a> or <a href="https://gitter.im/openseadragon/openseadragon">Gitter</a> (also accessible via <a href="https://irc.gitter.im/">IRC</a>)</p>
+<p>Chat: <a href="https://discord.gg/Ygwap8UrGC">Discord</a> or <a href="https://gitter.im/openseadragon/openseadragon">Gitter</a></p>
+<p>Also see our <a href="https://github.com/openseadragon/openseadragon/wiki/FAQ">FAQ</a>.</p>
 <!-- <p>IRC: #openseadragon on irc.freenode.net (<a href="irc://irc.freenode.net/#openseadragon">launch on desktop</a> or <a href="http://webchat.freenode.net/?channels=openseadragon">chat in the browser</a>)</p> -->
 
 
