--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -190,6 +190,7 @@
     <li>Dungeons and Dragons Forgotten Realms Map, <a href="https://dndcombat.com/faerun">Faerun</a></li>
     <li><a href="http://embers.nicejacket.cc/known-eilarun.html">The Embers of Eilar&ucirc;n</a></li>
     <li><a href="http://map.projectzomboid.com/">Project Zomboid Map Project</a></li>
+    <li>Ultrafast Superzoom <a href="https://noitamap.com">Map for Noita</a></li>
 </ul>
 
 <h4><a name="history"></a>History</h4>
