--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -373,6 +373,7 @@
     <li><a href="http://www.allencell.org/deep-cell-zoom.html">Allen Cell Explorer</a></li>
     <li><a href="https://www.doc.ic.ac.uk/~dmcginn/adjmat.html">Bitcoin Blockchain Explorer</a></li>
     <li><a href="http://cancer.digitalslidearchive.net/">Cancer Digital Slide Archive</a></li>
+    <li><a href="https://contact.engineering/">contact.engineering - Surface topography database</a></li>
     <li>
         <a href="https://covid19pathology.nih.gov/">COVID Digital Pathology Repository</a>
         <ul>
