--- a/index.html
+++ b/index.html
@@ -384,9 +384,12 @@
 
 
 <h2 id='support'>Support</h2>
-<p>GitHub: <a href="https://github.com/openseadragon/openseadragon/issues">issue tracker</a></p>
-<p>Twitter: <a href="https://twitter.com/openseadragon">@OpenSeadragon</a></p>
-<p>Chat: <a href="https://discord.gg/Ygwap8UrGC">Discord</a> or <a href="https://gitter.im/openseadragon/openseadragon">Gitter</a></p>
+<p>GitHub: <a href="https://github.com/openseadragon/openseadragon/issues">issue tracker</a> and <a href="https://github.com/openseadragon/openseadragon/discussions">discussions</a></p>
+<p>Twitter: <a href="https://twitter.com/openseadragon">@openseadragon</a></p>
+<p>Bluesky: <a href="https://bsky.app/profile/openseadragon.bsky.social">@openseadragon.bsky.social</a></p>
+<p>Chat: <a href="https://discord.gg/Ygwap8UrGC">Discord</a><!-- or <a href="https://gitter.im/openseadragon/openseadragon">Gitter</a>--></p>
+<p>Reddit: <a href="https://www.reddit.com/r/openseadragon/">r/openseadragon</a></p>
+<p>Stack Overflow: <a href="https://stackoverflow.com/questions/tagged/openseadragon">#openseadragon</a></p>
 <p>Also see our <a href="https://github.com/openseadragon/openseadragon/wiki/FAQ">FAQ</a>.</p>
 <!-- <p>IRC: #openseadragon on irc.freenode.net (<a href="irc://irc.freenode.net/#openseadragon">launch on desktop</a> or <a href="http://webchat.freenode.net/?channels=openseadragon">chat in the browser</a>)</p> -->
 
