--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -179,6 +179,7 @@
     <li>
         <a href="https://zachfox.photography/">Zach Fox Photography</a>
         <ul>
+            <li>e.g. <a href="https://zachfox.photography/stories/gigapixel-lisbon-portugal-sunset/">Gigapixel Panorama: Lisbon Sunset</a></li>
             <li>e.g. <a href="https://zachfox.photography/stories/gigapixel-manhattan-skyline-nyc/">Gigapixel Panorama: Manhattan Skyline, NYC</a></li>
             <li>e.g. <a href="https://zachfox.photography/stories/gigapixel-manhattan-skyline-nyc-night/">Gigapixel Panorama: Manhattan Skyline, NYC at Midnight</a>
         </ul>
