--- a/examples/creating-zooming-images/index.html
+++ b/examples/creating-zooming-images/index.html
@@ -240,6 +240,15 @@
         <td>Free Google Cloud Dataflow template allowing large amounts of images to be processed in parallel</td>
         <td><a href="/examples/tilesource-zoomify/">Zoomify</a></td>
     </tr>
+    
+    <tr>
+        <td colspan="3"><h4>Tools for Working with Tiled Images</h4></td>
+    </tr>
+    <tr>
+        <td><a href="https://github.com/cioran0/dzOpen">dzOpen</a></td>
+        <td>Free desktop app for locally viewing DZI files for Windows. Linux soon.</td>
+        <td><a href="/examples/tilesource-dzi/">DZI</a></td>
+    </tr>
 </table>
 <br/>
 <p>If none of these options meet your needs, you can create your own tile-generating tool. See <a href="https://github.com/openseadragon/openseadragon/wiki/The-DZI-File-Format">this page</a> for more information on the DZI format.</p>
