Added learning course

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
                     >Download &amp; Install</a></li>
                 <li><a href='/docs/'
                     >API Documentation</a></li>
+                <li><a href='/#learning-course'
+                    >Learning Course</a></li>
                 <li><a href='/#support'
                     >Support</a></li>
                 <li><a href='/#development'
@@ -382,6 +384,11 @@
 
 <h2 id='api-documentation'>API Documentation</h2>
 <p>Available on our <a href="/docs/">documentation pages</a>. Also see our <a href="https://github.com/openseadragon/openseadragon/wiki/FAQ">FAQ</a>.</p>
+
+
+<h2 id='learning-course'>Learning Course</h2>
+<p>The <a href="https://www.newline.co/courses/openseadragon-deep-dive">official OpenSeadragon course</a> is now live! Taught by <a href="https://iangilman.com/">Ian Gilman</a>, creator and maintainer, this is your best introduction to working with OpenSeadragon, from basic concepts to coordinate systems, animation, and beyond.</p>
+<p><a href="https://www.newline.co/courses/openseadragon-deep-dive"><img src="/images/osdnewline.jpg" height="280"/></a></p>
 
 
 <h2 id='support'>Support</h2>
