--- a/examples/creating-zooming-images/index.html
+++ b/examples/creating-zooming-images/index.html
@@ -262,9 +262,10 @@
     </tr>
     <tr>
         <td>
-            szi_explorer <a href="https://github.com/infovore/szi_explorer">repo</a> and <a href="https://szi-explorer.netlify.app">demo</a>
+            OpenSeadragon
+            <a href="https://github.com/sundogbio/szi-tile-source">SZITileSource</a> and <a href="https://sundogbio.github.io/szi-tile-source/">demo</a>
         </td>
-        <td>SZI is losslessly zipped DZI container, and szi_explorer is the current OSD implementation by infovore and PolCPP. SZI can be produced with <a href="https://www.libvips.org/API/current/making-image-pyramids.html">libvips</a></td>
+        <td>SZI is losslessly zipped DZI container. SZI can be produced with <a href="https://www.libvips.org/API/current/making-image-pyramids.html">libvips</a></td>
         <td><a href="https://github.com/smartinmedia/SZI-Format/blob/master/SZI%20format%20description%20-%202018-11-24.pdf">SZI</a></td>
     </tr>
     <tr>
