--- a/index.html
+++ b/index.html
@@ -151,6 +151,11 @@
                     GeoTIFFTileSource - view TIFF-compatible files via geotiff.js
                 </a>
             </li>
+            <li>
+                <a href="https://github.com/sundogbio/szi-tile-source">
+                    SZITileSource - view SZI images (DZI images bundled as single files)
+                </a>
+            </li>
         </ul>
     </li>
 
@@ -297,6 +302,7 @@
         </p>
         <ul class="square-list">
             <li><a href="https://github.com/pearcetm/GeoTIFFTileSource">GeoTIFFTileSource</a> enables direct viewing of TIFF-compatible files, including Aperio SVS and other formats, directly - no converters needed. This can be used to view local files or on web, without requiring a webserver.</li>
+            <li><a href="https://github.com/sundogbio/szi-tile-source">SZITileSource</a> enables viewing of SZI files - essentially, DZI (Deep Zoom Images) bundled as a single, uncompressed zipfile. Works with local files, files hosted via webservers, or files on S3-compatible object stores (subject to meeting the documented requirements).</li>
         </ul>
     </li>
     <li>
