--- a/examples/in-the-wild/index.html
+++ b/examples/in-the-wild/index.html
@@ -181,9 +181,11 @@
     <li>
         <a href="https://zachfox.photography/">Zach Fox Photography</a>
         <ul>
-            <li>e.g. <a href="https://zachfox.photography/stories/gigapixel-lisbon-portugal-sunset/">Gigapixel Panorama: Lisbon Sunset</a></li>
-            <li>e.g. <a href="https://zachfox.photography/stories/gigapixel-manhattan-skyline-nyc/">Gigapixel Panorama: Manhattan Skyline, NYC</a></li>
-            <li>e.g. <a href="https://zachfox.photography/stories/gigapixel-manhattan-skyline-nyc-night/">Gigapixel Panorama: Manhattan Skyline, NYC at Midnight</a>
+            <li>e.g. <a href="https://zachfox.photography/stories/gigapixel-mirador-del-silenci-spain/">Mirador del Silenci, Spain (14.75 Gigapixels)</a></li>
+            <li>e.g. <a href="https://zachfox.photography/stories/gigapixel-tibidabo-barcelona-spain/">Tibidabo, Barcelona (1.00 Gigapixels)</a></li>
+            <li>e.g. <a href="https://zachfox.photography/stories/gigapixel-lisbon-portugal-sunset/">Lisbon Sunset (2.39 Gigapixels)</a></li>
+            <li>e.g. <a href="https://zachfox.photography/stories/gigapixel-manhattan-skyline-nyc/">Manhattan Skyline, NYC (2.93 Gigapixels)</a></li>
+            <li>e.g. <a href="https://zachfox.photography/stories/gigapixel-manhattan-skyline-nyc-night/">Manhattan Skyline, NYC at Midnight (2.83 Gigapixels)</a>
         </ul>
     </li>
 </ul>
